# cmpe-275-mini-1

./: .gitignore  Armaghan-ClientAppToJava.cpp  README-project.md
cpp-src/basic/: .clang-tidy  CMakeLists.txt  README.md  clean.sh
cpp-src/basic/b/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cpp-src/basic/b/src/: Makefile  cmake_install.cmake
cpp-src/basic/b/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cpp-src/basic/b2/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cpp-src/basic/b2/src/: Makefile  cmake_install.cmake
cpp-src/basic/b2/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cpp-src/basic/src/: CMakeLists.txt
cpp-src/basic/src/apps/: ClientApp.cpp  ServerApp.cpp
cpp-src/basic/src/payload/: basicbuilder.cpp  basicbuilder.hpp  message.hpp
cpp-src/basic/src/socket/: client.cpp  client.hpp  server.cpp  server.hpp  sessionhandler.cpp  sessionhandler.hpp
cpp-src/basic/test/: ._demoapp.cpp  CMakeLists.txt  demoapp.cpp  parser  parser.cpp
java-src/basic/: .classpath  .project  README.md  client.sh  server.sh
java-src/basic/src/gash/app/: ClientApp.java  ServerApp.java
java-src/basic/src/gash/payload/: BasicBuilder.java  Message.java
java-src/basic/src/gash/socket/: BasicClient.java  BasicServer.java  SessionHandler.java
java-src/basic/test/: BuilderTest.java
python-src/basic/: README.md
python-src/basic/payload/: builder.py
python-src/basic/socket/: client.py  outputData.json  sampledata.json  server.py
python-src/basic/tests/: testBuilder.py
